--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <div class="profile">
-            <img src="profile.jpg" alt="Veronica Arvelaiz" />
+            <div class="profile-picture">
+            <img src="profile.jpg" alt="Veronica Arvelaiz"/>
+        </div>
             <h1>Veronica arvelaiz</h1>
             <p>Designer UX/UI</p>
             <div class="toggle">
